# bitgreenold

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  setup.sh
.github/: ISSUE_TEMPLATE.md
.travis/: lint_06_script.sh  test_03_before_install.sh  test_04_install.sh  test_05_before_script.sh  test_06_script.sh
build-aux/m4/: bitcoin_qt.m4
contrib/: README.md  bitcoingreen-cli.bash-completion  bitcoingreen-qt.pro  bitcoingreen-tx.bash-completion  bitcoingreend.bash-completion  bitgreen-cli.bash-completion  bitgreen-qt.pro  bitgreen-tx.bash-completion  bitgreend.bash-completion  gitian-build.sh  install_db4.sh  tidy_datadir.sh  valgrind.supp
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  bitcoingreen-qt.desktop.desktop  bitcoingreen-qt.install  bitcoingreen-qt.lintian-overrides  bitcoingreen-qt.protocol  bitcoingreend.bash-completion  bitcoingreend.examples  bitcoingreend.install  bitcoingreend.lintian-overrides  bitcoingreend.manpages  bitgreen-qt.desktop.desktop  bitgreen-qt.install  bitgreen-qt.lintian-overrides  bitgreen-qt.protocol  bitgreend.bash-completion  bitgreend.examples  bitgreend.install  bitgreend.lintian-overrides  bitgreend.manpages  changelog  control  rules
contrib/devtools/: README.md  check-doc.py  gen-manpages.sh  logprint-scanner.py  optimize-pngs.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-aarch64.yml  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-local.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  bitcoingreend.conf  bitcoingreend.init  bitcoingreend.openrc  bitcoingreend.openrcconf  bitcoingreend.service  (+5 more)
depends/: README.md
doc/: Doxyfile  Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode-community.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  unit-tests.md  zmq.md
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  bip38.cpp  bitcoingreen-cli-res.rc  bitcoingreen-cli.cpp  bitcoingreen-tx-res.rc  bitcoingreen-tx.cpp  bitcoingreend-res.rc  bitcoingreend.cpp  bitgreen-cli-res.rc  bitgreen-cli.cpp  bitgreen-tx.cpp  bitgreend-res.rc  bitgreend.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  (+107 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  strnlen.cpp
src/leveldb/: .gitignore
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bip38tooldialog.cpp  bip38tooldialog.h  bitcoinaddressvalidator.cpp  bitcoinamountfield.cpp  bitcoingreen.cpp  bitcoingreen.qrc  bitcoingreen_locale.qrc  bitcoingreenstrings.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  bitgreen.cpp  bitgreen.qrc  bitgreen_locale.qrc  bitgreenstrings.cpp  blockexplorer.cpp  blockexplorer.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  masternodelist.h  multisenddialog.cpp  multisenddialog.h  multisigdialog.cpp  networkstyle.cpp  notificator.cpp  (+58 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  bip38tooldialog.ui  blockexplorer.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  masternodelist.ui  multisenddialog.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoingreen_bg.ts  bitcoingreen_ca.ts  bitcoingreen_cs.ts  bitcoingreen_da.ts  bitcoingreen_de.ts  bitcoingreen_en.ts  bitcoingreen_en_US.ts  bitcoingreen_es.ts  bitcoingreen_fi.ts  bitcoingreen_fr_FR.ts  bitcoingreen_it.ts  bitcoingreen_ja.ts  bitcoingreen_ko_KR.ts  bitcoingreen_nl.ts  bitcoingreen_pl.ts  bitcoingreen_pt.ts  bitcoingreen_pt_BR.ts  bitcoingreen_ro_RO.ts  bitcoingreen_ru.ts  bitcoingreen_sk.ts  bitcoingreen_sv.ts  bitcoingreen_tr.ts  bitcoingreen_uk.ts  bitcoingreen_zh_CN.ts  bitcoingreen_zh_TW.ts  bitgreen_bg.ts  bitgreen_ca.ts  bitgreen_cs.ts  bitgreen_da.ts  bitgreen_de.ts  bitgreen_en.ts  bitgreen_en_US.ts  bitgreen_es.ts  bitgreen_fi.ts  bitgreen_fr_FR.ts  bitgreen_it.ts  bitgreen_ja.ts  bitgreen_ko_KR.ts  bitgreen_nl.ts  bitgreen_pl.ts  (+10 more)
src/qt/res/: bitcoingreen-qt-res.rc  bitgreen-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: paymentservertests.cpp  test_main.cpp  uritests.cpp
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.h  sigcache.cpp  standard.cpp
src/support/: cleanse.cpp  cleanse.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  alert_tests.cpp  bitcoin-util-test.py  key_tests.cpp  main_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_bitcoingreen.cpp  test_bitgreen.cpp  test_bitgreen.h  timedata_tests.cpp  transaction_tests.cpp  util_tests.cpp
src/test/data/: base58_keys_invalid.json  base58_keys_valid.json  bitcoin-util-test.json  script_invalid.json  script_valid.json
src/univalue/: .gitignore
src/zmq/: zmqconfig.h  zmqnotificationinterface.cpp
test/: README.md
(+59 files in other folders)
